Revert "flat-feat!: Dynamically add RWT cols to attestation check-in report"
[#OCD-5321]

This reverts commit aa2e672ccc9ceb5ea7aeb4ff32ae410320869ca4.